# zhiku

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  PROJECT-MAP.md  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: data-engine.json  default.json  window.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  api_status.rs  credit_cycle.rs  game_map.rs  macro_data.rs  market_data.rs  mod.rs  news.rs  settings.rs  shell.rs
src-tauri/src/data/: country_profiles.json  country_roles.json  data_reliability.json  event_triggers.json  geopolitical_graph.json  media_bias_registry.json  policy_calendar.json  power_structures.json
src-tauri/src/errors/: mod.rs
src-tauri/src/models/: ai.rs  credit.rs  intelligence.rs  macro_data.rs  mod.rs  news.rs  signal.rs
src-tauri/src/services/: ai_config.rs  ai_provider.rs  ai_router.rs  alert_engine.rs  bis_client.rs  claude_client.rs  coingecko_client.rs  company_intel.rs  credit_cycle_engine.rs  cycle_reasoner.rs  daily_brief.rs  db.rs  deep_analyzer.rs  dollar_tide.rs  eia_client.rs  fear_greed_client.rs  fred_client.rs  game_map.rs  global_aggregator.rs  groq_client.rs  imf_client.rs  indicator_engine.rs  knowledge_base.rs  market_context.rs  market_radar.rs  mempool_client.rs  mod.rs  news_cluster.rs  news_heatmap.rs  ollama_client.rs  openai_compat.rs  poll_loop.rs  qt_rest.rs  qt_ws.rs  reasoning_scorer.rs  rss_fetcher.rs  scenario_engine.rs  summarizer.rs  trend_tracker.rs  (+2 more)
(+147 files in other folders)
